# space-router-sdk

./: .gitignore  README.md  TODO.md
.claude/: launch.json
.github/workflows/: e2e-testnet.yml  publish.yml  test.yml
cli/: pyproject.toml
cli/src/spacerouter_cli/: __init__.py  config.py  main.py
cli/src/spacerouter_cli/commands/: billing.py  dashboard.py  escrow.py  identity.py  node.py  receipts.py  regions.py  request.py
cli/tests/: conftest.py  test_billing.py  test_config_cmd.py  test_dashboard.py  test_escrow_approve_cli.py  test_integration.py  test_node.py  test_receipts_cli.py  test_regions.py  test_request.py  test_status.py
coordination-api/: .env.example  fly.toml  requirements.txt  schema.sql
coordination-api/app/: main.py  sqlite_db.py
coordination-api/migrations/: 001_add_tailscale_fields.sql
coordination-api/tests/: test_internal.py  test_routing_service.py
docs/: configuration.md  deployment.md  e2e-testing.md
home-node/: requirements.txt
home-node/app/: config.py  main.py  registration.py  tailscale.py  upnp.py
home-node/tests/: test_registration.py  test_tailscale.py
proxy-gateway/: Dockerfile  start.sh
proxy-gateway/app/: auth.py  config.py  errors.py  proxy.py  routing.py
proxy-gateway/tests/: test_proxy.py  test_proxyjet_e2e.py  test_routing.py  test_socks5.py
sdk/js/: .npmignore  (+4 more)
sdk/python/: README.md  pyproject.toml
sdk/python/docs/: consumer-quickstart.md
sdk/python/src/spacerouter/: __init__.py  admin.py  client.py  escrow.py  exceptions.py  identity.py  models.py
sdk/python/src/spacerouter/payment/: __init__.py  consumer_settlement.py  spacecoin_client.py
sdk/python/tests/: E2E.md  conftest.py  test_admin.py  test_autopay.py  test_client.py  test_client_identity.py  test_consumer_settlement_retries.py  test_consumer_settlement_strict.py  test_e2e_helpers.py  test_e2e_testnet.py  test_escrow.py  test_integration.py  test_payment_sdk.py  test_protocol_vector.py  test_proxy_error_mapping.py
tailscale/: acl.json
(+33 files in other folders)
