[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spacerouter-cli"
version = "1.5.0rc2"
description = "CLI for the Space Router residential proxy network — designed for AI agents"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer>=0.12,<1.0",
    "httpx>=0.27,<1.0",
    "spacerouter>=1.5.0rc2",
    "rich>=13.0,<14.0",
]

[project.scripts]
spacerouter = "spacerouter_cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.22",
]

[tool.hatch.build.targets.wheel]
packages = ["src/spacerouter_cli"]

# Sdist whitelist — match the wheel surface; never ship tests or fixtures.
[tool.hatch.build.targets.sdist]
include = [
    "src/spacerouter_cli",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
