[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spacerouter"
version = "1.5.0rc2"
description = "Python SDK for the Space Router residential proxy network"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
    "eth-account>=0.13,<1.0",
    "web3>=7,<8",
    "tenacity>=8.0,<10.0",
]

[project.optional-dependencies]
socks = ["httpx[socks]>=0.27,<1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "socksio>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/spacerouter"]

# Sdist whitelist — only ship the source package + licence + readme.
# Without this, hatchling's default sdist rules ship everything in the
# source dir (tests/, docs/, fixtures, scripts). Keep in lock-step
# with the wheel target above.
[tool.hatch.build.targets.sdist]
include = [
    "src/spacerouter",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
